# kerai-bot

./: .gitignore  LICENSE.md  README.md  bot.cfg  pyproject.toml
src/keraibot/: __main__.py  auth.py  bot.py  cli.py  errors.py
src/keraibot/commands/: __init__.py  responses.py
src/keraibot/core/: api.py  auth.py  bot.py  chat.py  cli.py  command_manager.py  commands.py  config.py  db.py  errors.py  model.py  utils.py
