[project]
name = "kerai-bot"
version = "0.1.1"
requires-python = ">= 3.10"
dependencies = [
    "requests",
    "requests-oauthlib",
    "click",
    "python-dotenv",
    "websockets",
    "twitchapi",
]

[project.scripts]
kerai-bot = "keraibot.core.cli:cli"

[tool.pylint]
disable = ["W1203", "W0718"]
